fix alignment of item in desktop mode

--- a/styles/shows.scss
+++ b/styles/shows.scss
@@ -92,6 +92,7 @@
         flex-direction: column;
         @include desktop {
             flex-direction: row;
+            align-items: baseline;
         }
         &_title {
             margin: 0;
